--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,8 +1,16 @@
 <div class="row">
-    <div class="col-xs-10"></div>
-    <app-shopping-edit></app-shopping-edit>
+  <div class="col-xs-10">
+    <app-shopping-edit
+      (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
     <hr>
     <ul class="list-group">
-        <a href="" class="list-group-item" style="cursor: pointer;" *ngFor='let i of ingridients'>{{i.name}} ({{i.amount}})</a>
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredient of ingredients"
+      >
+        {{ ingredient.name }} ({{ ingredient.amount }})
+      </a>
     </ul>
+  </div>
 </div>
